[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Menus/TacticalMenu.gd" type="Script" id=1]

[node name="TacticalMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimaryBG" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 560 )
color = Color( 0.458824, 0.113725, 0.717647, 0.168627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondaryBG" type="ColorRect" parent="."]
margin_left = 225.0
margin_top = 20.0
margin_right = 425.0
margin_bottom = 580.0
rect_min_size = Vector2( 200, 0 )
color = Color( 0.458824, 0.113725, 0.717647, 0.168627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 230.0
margin_top = 35.0
margin_right = 420.0
margin_bottom = 35.0
focus_mode = 0
custom_constants/vseparation = 10
custom_constants/line_separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrimaryVBoxContainer" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 35.0
margin_right = 180.0
margin_bottom = 580.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TacticalMenuLabel" type="Label" parent="PrimaryVBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Tactical Menu"
align = 1
uppercase = true

[node name="Control" type="Control" parent="PrimaryVBoxContainer"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 5 )

[node name="WeaponsBtn" type="Button" parent="PrimaryVBoxContainer"]
margin_top = 39.0
margin_right = 120.0
margin_bottom = 59.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
text = "Weapons"

[node name="ShipsBtn" type="Button" parent="PrimaryVBoxContainer"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 89.0
rect_min_size = Vector2( 80, 20 )
focus_mode = 0
text = "Ships"

[node name="ItemsBtn" type="Button" parent="PrimaryVBoxContainer"]
margin_top = 99.0
margin_right = 120.0
margin_bottom = 119.0
focus_mode = 0
text = "Items"

[connection signal="button_up" from="PrimaryVBoxContainer/WeaponsBtn" to="." method="_on_WeaponsBtn_button_up"]
[connection signal="button_up" from="PrimaryVBoxContainer/ShipsBtn" to="." method="_on_ShipsBtn_button_up"]
